# eaip2sql

./: .gitignore  Cargo.toml
src/: main.rs  schema.sql
